--- a/markdown/projects/test.mdx
+++ b/markdown/projects/test.mdx
@@ -34,6 +34,13 @@ This is the second paragraph. It should have some space above and below it.
 
 ![Alt text for an image](https://upload.wikimedia.org/wikipedia/commons/9/91/Bruce_McCandless_II_during_EVA_in_1984.jpg)
 
+<img 
+  src="https://upload.wikimedia.org/wikipedia/commons/9/91/Bruce_McCandless_II_during_EVA_in_1984.jpg" 
+  alt="Space walk" 
+  width={800}
+  height={600}
+/>
+
 ## Blockquotes
 
 > This is a blockquote. It should have a left border and italic text.
