--- a/markdown/card.mdx
+++ b/markdown/card.mdx
@@ -16,16 +16,23 @@ experiences:
       - Contributed to an interdisciplinary group focusing on rapidly developing and field-testing innovative sensor systems for persistent surveillance in space and on Earth.
       - Designed and built prototypes involving electro-optics, infrared sensors, novel focal plane arrays, embedded processors, and image processing technologies.
       - Contributed to motion control tasks related to a satellite camera focus mechanism.
+  - title: Satellite Team Co-Lead
+    company: Stanford Student Space Initiative – Satellites Team, Stanford, CA
+    period: April 2025 – Present
+    responsibilities:
+      - Lead of ~40 person SSI Satellites team for the 2U SAMWISE program to launch October 2025 on SpaceX Transporter 15
+      - General program management, including budget, schedule, and team organization
+      - Tasks from prior work as Structures Co-Lead and Mission Control Lead are carried over to this role
   - title: Mission Control Lead
     company: Stanford Student Space Initiative – Satellites Team, Stanford, CA
-    period: Sep 2023 – Present
+    period: Sep 2023 – March 2025
     responsibilities:
       - Manage all command and control (C2) tasks, including ground control systems, satellite health monitoring, orbit tasking, and telemetry and mission data storage/processing.
       - Design and deploy a 2400 MHz S-band ground station for high-speed photo downlink.
       - Improve reliability of the UHF ground station and develop the ground control and data storage architecture.
-  - title: Structures CoLead
+  - title: Structures Co-Lead
     company: Stanford Student Space Initiative – Satellites Team, Stanford, CA
-    period: Sep 2023 – Present
+    period: Sep 2023 – March 2025
     responsibilities:
       - Lead development of bus systems, heat management structures, camera baffles, deployables, and satellite integration/assembly.
       - Redesigned bus components for laser cutting and designed/manufactured hinges for the double-fold solar array using CNC milling and metal 3D printing.
