--- a/markdown/card.mdx
+++ b/markdown/card.mdx
@@ -9,6 +9,11 @@ location: Palo Alto, CA
 linkedin: https://www.linkedin.com/in/mason-matich/
 summary: Mechanical Engineering student at Stanford University with hobbyist, academic, and professional experience in motor control, embedded systems, satellite bus development, and RF systems. I'm interested in spacecraft engineering, deployable structures, defense-tech, and ground control systems.
 experiences:
+  - title: Build Reliability Engineering (BRE) Intern, Starship
+    company: Starship - SpaceX, Brownsville, TX
+    period: Jun 2025 – Present
+    responsibilities:
+      - Incoming Starship build reliability engineering (BRE) intern for summer 2025
   - title: Space Systems Intern
     company: Advanced Electro-Optical Systems (G99) - MIT Lincoln Laboratory, Lexington, MA
     period: Jun 2024 – Aug 2024
